manifests/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: creating-k8s
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
