manifests/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: creating-k8s
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
