manifests/deny-a-to-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-a-to-b
spec:
  podSelector:
    matchLabels:
      app: service-b
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: NotIn
          values:
          - service-a
  policyTypes:
  - Ingress
